--- a/chrome/bootflasher/window.css
+++ b/chrome/bootflasher/window.css
@@ -43,3 +43,28 @@ select {
 select option {
 	background: #313131;
 }
+
+progress {
+	-webkit-appearance: none;
+	appearance: none;
+	height: 35px;
+	border: 3px solid #626262;
+	border-radius: 5px;
+}
+
+progress[value]::-webkit-progress-bar {
+	background-color: #313131;
+	border-radius: 5px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value {
+  background-image:
+	   -webkit-linear-gradient(top, 
+	                           rgba(255, 255, 255, .25), 
+	                           rgba(0, 0, 0, .25)),
+	   -webkit-linear-gradient(left, #8cd20f, #3a8005);
+
+    border-radius: 3px; 
+    background-size: 60px 40px, 100% 100%, 100% 100%;
+}
